Bug 385771 - disallow item-annotations for invalid item ids. r=dietrich.